Add data type detection for CEL Command Console version 1 format.

--- a/config/datatypes_conf.xml.sample
+++ b/config/datatypes_conf.xml.sample
@@ -45,6 +45,7 @@
       <display file="igb/bigwig.xml" />
     </datatype>
     <datatype extension="cel" type="galaxy.datatypes.cel:Cel" mimetype="application/octet-stream" subclass="True" display_in_upload="True" />
+    <datatype extension="celcc1" type="galaxy.datatypes.celcc1:CelCc1" mimetype="application/octet-stream" subclass="True" display_in_upload="True" />
     <datatype extension="cxb" type="galaxy.datatypes.binary:Binary" mimetype="application/octet-stream" subclass="True" display_in_upload="true" description="Cuffquant output format" />
     <datatype extension="chrint" type="galaxy.datatypes.interval:ChromatinInteractions" display_in_upload="True">
       <converter file="interval_to_bgzip_converter.xml" target_datatype="bgzip"/>
@@ -423,6 +424,7 @@
     and so on.
     -->
     <sniffer type="galaxy.datatypes.cel:Cel"/>
+    <sniffer type="galaxy.datatypes.celcc1:CelCc1"/>
     <sniffer type="galaxy.datatypes.tabular:Vcf"/>
     <sniffer type="galaxy.datatypes.binary:TwoBit"/>
     <sniffer type="galaxy.datatypes.binary:GeminiSQLite"/>
